syntax = "proto3";
package eganow.api;

option go_package = "github.com/eganow/partners/sampler/api/v1;pb";

import "google/api/field_behavior.proto";

message LoginRequest {
  string email = 1 [(google.api.field_behavior) = REQUIRED];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
}

message GetCurrentUserResponse {
  string email = 1;
  string name = 2;
}